--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,7 +37,7 @@ plugins:
   - git-committers:
       enabled: !ENV [MKDOCS_ENABLE_PLUGIN_GIT_COMMITTERS, false]
       repository: geotribu/site-contribuer
-      branch: master
+      branch: main
       docs_path: content/
   - git-revision-date-localized:
       enabled: !ENV [MKDOCS_ENABLE_PLUGIN_GIT_DATES, false]
