Ajoute l'URL du site principal à la configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -160,6 +160,7 @@ theme:
 
 # Customization
 extra:
+  geotribu_main_site: https://static.geotribu.fr/
   consent:
     title: Consentement 🍪
     actions:
