--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,12 +106,17 @@ plugins:
         - twemoji.maxcdn.com/*
         - upload.wikimedia.org/*
         - user-images.githubusercontent.com/**/*.gif
+  - social:
+      cards: !ENV [MKDOCS_ENABLE_PLUGIN_CARDS, true]
+      cards_color:
+        fill: "#3e93a7"
+      cards_font: Ubuntu
 
 # Theme
 theme:
   name: "material"
   custom_dir: "./content/theme/"
-  favicon: "https://cdn.geotribu.fr/img/internal/charte/old_geotribu_logo.png"
+  favicon: theme/assets/images/geotribu/geotribu_logo_tipi_seul_carre.png
 
   # Don't include MkDocs' JavaScript
   include_search_page: false
@@ -131,7 +136,7 @@ theme:
     - toc.follow
   font: false
   language: fr
-  logo: "https://cdn.geotribu.fr/img/internal/charte/geotribu_logo_64x64.png"
+  logo: theme/assets/images/geotribu/geotribu_logo_tipi_seul_carre.png
   palette:
     # Palette toggle for automatic mode
     - media: "(prefers-color-scheme)"
