--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,6 @@ mkdocs-macros-plugin>=0.5,<0.8
 mkdocs-minify-plugin<0.7
 mkdocs-redirects<1.3
 mkdocs-rss-plugin>=1.4,<1.6
+
+CairoSVG>=2.5,<2.6
+Pillow>=9.4,<9.5
