--- a/.github/workflows/links_checker.yml
+++ b/.github/workflows/links_checker.yml
@@ -8,6 +8,9 @@ on:
     paths:
       - ".github/workflows/links_checker.yml"
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   linkchecker:
     name: "🔗 Check la validité des liens du site"
