--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,7 +107,7 @@ plugins:
         - upload.wikimedia.org/*
         - user-images.githubusercontent.com/**/*.gif
   - social:
-      cards: !ENV [MKDOCS_ENABLE_PLUGIN_CARDS, true]
+      cards: !ENV [MKDOCS_ENABLE_PLUGIN_CARDS, false]
       cards_color:
         fill: "#3e93a7"
       cards_font: Ubuntu
