--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,7 +124,9 @@ theme:
   search_index_only: true
 
   features:
+    - content.action.edit
     - content.code.annotate
+    - content.code.copy
     - content.tabs.link
     - content.tooltips
     - navigation.prune
