--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Build static website
         run: |
           python scripts/mkdocs_config_merger.py -c mkdocs.yml
-          mkdocs build --clean --config-file mkdocs.yml --verbose
+          mkdocs build --clean --config-file mkdocs.yml --verbose --strict
         env:
           MKDOCS_ENABLE_PLUGIN_GIT_AUTHORS: true
           MKDOCS_ENABLE_PLUGIN_GIT_COMMITTERS: true
