--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,6 +100,7 @@ plugins:
         - cdn.geotribu.fr/img/*
         - geotribu.net/*
         # external
+        - cdnjs.cloudflare.com/ajax/libs/twemoji/*
         - github.com/**/*.gif
         - i.imgur.com/*
         - raw.githubusercontent.com/*
