--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -129,6 +129,7 @@ theme:
     - content.code.copy
     - content.tabs.link
     - content.tooltips
+    - navigation.path
     - navigation.prune
     - navigation.tabs
     - navigation.top
