--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -8,6 +8,9 @@ dependencies:
     - ./**/requirements.txt
     - requirements*.txt
 
+géocapot:
+    - content/internal/**/*
+
 mkdocs:
     - content/**/*.pages
     - mkdocs*.yml
