--- a/.github/workflows/pr_checker_build.yml
+++ b/.github/workflows/pr_checker_build.yml
@@ -61,6 +61,7 @@ jobs:
 
       - name: Build in strict mode
         env:
+          MKDOCS_ENABLE_PLUGIN_CARDS: true
           NETLIFY_BRANDING: '<a href="https://www.netlify.com/"><img alt="Deploys by Netlify" src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg" style="float: right;"></a>'
         run: |
           # site name
