--- a/config/extra_tags.yml
+++ b/config/extra_tags.yml
@@ -44,7 +44,7 @@ tags:
   Leaflet: feuille
   Lego: brick
   LIDAR: satellite
-  lint: balai
+  linter: balai
   livre: atlas
   Linux: pingouin
   Mapillary: streetview
