Fix strict build by upgrading privacy options

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,9 +90,9 @@ plugins:
   - privacy:
       # enabled: !ENV [MKDOCS_ENABLE_PLUGIN_PRIVACY, false]
       enabled: true
-      external_links_attr_map:
+      links_attr_map:
         target: _blank
-      external_assets_exclude:
+      assets_exclude:
         # mandatory - https://squidfunk.github.io/mkdocs-material/setup/ensuring-data-privacy/
         - cdn.jsdelivr.net/npm/mathjax@3/*
         - giscus.app/*
