--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -211,6 +211,7 @@ markdown_extensions:
       base_path:
         - "."
       check_paths: true
+      url_download: true
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
