--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -114,7 +114,7 @@
             "problemMatcher": []
         },
         {
-            "label": "Mkdocs - Servir le site localement (config MINIMALE)",
+            "label": "Mkdocs - Servir le site localement (config GRATUITE)",
             "group": "test",
             "command": "${config:python.defaultInterpreterPath}",
             "args": [
@@ -122,7 +122,7 @@
                 "mkdocs",
                 "serve",
                 "-f",
-                "mkdocs-minimal.yml",
+                "mkdocs-free.yml",
                 "--dirtyreload"
             ],
             "presentation": {
