Ajout icon GéoCapot

--- a/config/extra_tags.yml
+++ b/config/extra_tags.yml
@@ -17,6 +17,7 @@ tags:
   FIG: conference
   FME: roue
   FOSS4G: conference
+  GéoCapot: moteur
   GéoDataDays: conference
   GeoGames: manette
   GeoKettle: roue
