Change l'adresse du site principal pour geotribu.fr

--- a/mkdocs-free.yml
+++ b/mkdocs-free.yml
@@ -126,7 +126,7 @@ theme:
 
 # Customization
 extra:
-  geotribu_main_site: https://static.geotribu.fr/
+  geotribu_main_site: https://geotribu.fr/
   consent:
     title: Consentement 🍪
     actions:
