--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,10 @@
     },
     // Python
     "python.defaultInterpreterPath": ".venv/bin/python",
-    "python.formatting.provider": "black",
+    "python.formatting.provider": "none",
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
     "python.linting.enabled": false,
     // Git
     "git.ignoreLimitWarning": true,
