Change la structure des hyperliens pour Mkdocs 1.5
Ajoute la configuration pour le validateur de liens intégré à Mkdocs 1.5 et corrige les liens

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -218,3 +218,8 @@ markdown_extensions:
   # Permalinks - https://squidfunk.github.io/mkdocs-material/extensions/permalinks/
   - toc:
       permalink: "#"
+
+validation:
+  omitted_files: warn
+  absolute_links: warn
+  unrecognized_links: warn
