--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,7 @@ mkdocs-rss-plugin>=1.4,<1.9
 
 CairoSVG>=2.5,<3
 Pillow>=9.4,<10.1
+
+
+
+lxml-4.9.3 # TEMPORAIRE, voir https://github.com/ojacques/mkdocs-git-committers-plugin-2/issues/32
