--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,9 +109,8 @@ plugins:
         font_family: Ubuntu
   - tags:
       enabled: !ENV [MKDOCS_ENABLE_PLUGIN_TAGS, true]
-      tags_compare: !!python/name:material.plugins.tags.casefold ""
-      tags_file: tags.md
-      tags_pages_compare: !!python/name:material.plugins.tags.page_url ""
+      tags_sort_by: !!python/name:material.plugins.tags.tag_name_casefold
+      listings_sort_by: !!python/name:material.plugins.tags.item_url
 theme:
   name: "material"
   custom_dir: "./content/theme/"
