--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,17 @@
     "editor.bracketPairColorization.enabled": true,
     "editor.guides.bracketPairs": "active",
     "files.associations": {
-        "./requirements*.txt": "pip-requirements"
+        "./requirements*.txt": "pip-requirements",
+        ".linkcheckrrc": "ini",
+        "content/**/*.html": "jinja"
     },
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-        "source.organizeImports": true
+        "source.organizeImports": "explicit"
     },
     // Markdown
+    "markdown.updateLinksOnFileMove.enabled": "prompt",
+    "markdown.updateLinksOnFileMove.enableForDirectories": true,
     "markdown.validate.enabled": true,
     "markdown.validate.fileLinks.markdownFragmentLinks": "warning",
     "markdown.validate.fragmentLinks.enabled": "warning",
@@ -18,15 +22,29 @@
     },
     // Python
     "python.defaultInterpreterPath": ".venv/bin/python",
-    "python.formatting.provider": "none",
     "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter"
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "explicit"
+        },
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnSave": true,
+        "editor.guides.bracketPairs": "active",
+        "editor.rulers": [
+            88
+        ],
+        "editor.wordWrapColumn": 88,
     },
-    "python.linting.enabled": false,
-    // Git
-    "git.ignoreLimitWarning": true,
     // Extensions
     "cSpell.language": "fr",
+    "flake8.args": [
+        "--config=setup.cfg",
+        "--verbose"
+    ],
+    "isort.args": [
+        "--profile",
+        "black"
+    ],
+    "isort.check": true,
     "yaml.schemas": {
         "https://squidfunk.github.io/mkdocs-material/schema.json": "mkdocs*.yml",
         "https://json.schemastore.org/github-workflow.json": ".github/workflows/*.yml",
@@ -37,6 +55,10 @@
         "!ENV sequence",
         "tag:yaml.org,2002:python/name:material.extensions.emoji.to_svg",
         "tag:yaml.org,2002:python/name:material.extensions.emoji.twemoji",
-        "tag:yaml.org,2002:python/name:pymdownx.superfences.fence_code_format"
-    ]
+        "tag:yaml.org,2002:python/name:pymdownx.superfences.fence_code_format",
+        "tag:yaml.org,2002:python/name:material.plugins.tags.casefold",
+        "tag:yaml.org,2002:python/name:material.plugins.tags.page_url",
+        "tag:yaml.org,2002:python/name:material.plugins.tags.tag_name_casefold",
+        "tag:yaml.org,2002:python/name:material.plugins.tags.item_url"
+    ],
 }
