mkdocs: active le bouton pour voir les sources

--- a/config/theme_icon.yml
+++ b/config/theme_icon.yml
@@ -1,5 +1,7 @@
 icon:
+  edit: material/pencil
   repo: fontawesome/brands/github-alt
+  view: material/eye
   tag:
     default: fontawesome/solid/tag
     # -- custom tags icons
