--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -117,6 +117,7 @@ theme:
   favicon: theme/assets/images/geotribu/geotribu_logo_tipi_seul_carre.png
   features:
     - content.action.edit
+    - content.action.view
     - content.code.annotate
     - content.code.copy
     - content.tabs.link
@@ -133,8 +134,6 @@ theme:
   font:
     code: Ubuntu Mono
     text: Ubuntu
-  icon:
-    repo: fontawesome/brands/github-alt
   language: fr
   logo: theme/assets/images/geotribu/geotribu_logo_tipi_seul_carre.png
   palette:
