--- a/mkdocs-free.yml
+++ b/mkdocs-free.yml
@@ -3,9 +3,10 @@ site_name: Contribuer à Geotribu
 site_description: >-
   Guides de contribution au site participatif Geotribu et outillage interne.
 
-site_author: Geotribu
-site_url: https://contribuer.geotribu.fr/
-copyright: '<span class="copyleft">&copy;</span> Geotribu'
+site_author: !ENV [MKDOCS_SITE_AUTHOR, "Geotribu"]
+site_url: !ENV [MKDOCS_SITE_URL, "https://contribuer.geotribu.fr/"]
+copyright:
+  !ENV [MKDOCS_SITE_COPYRIGHT, '<span class="copyleft">&copy;</span> Geotribu']
 
 # Repository
 repo_name: !ENV [GITHUB_REPOSITORY, "geotribu/site-contribuer"]
@@ -13,12 +14,12 @@ repo_url: !ENV [MKDOCS_REPO_URL, "https://github.com/geotribu/site-contribuer"]
 edit_uri: !ENV [MKDOCS_EDIT_URI, "edit/main/content"]
 
 # Custom folder structure
-docs_dir: "./content"
-site_dir: "./build/mkdocs/site"
+docs_dir: !ENV [MKDOCS_SOURCE_DIR, "./content"]
+site_dir: !ENV [MKDOCS_OUTPUT_DIR, "./build/mkdocs/site"]
 
 # Scripts pendant le build
 hooks:
-  - hooks/mkdocs/G001_check_hyperlinks_internal.py
+  - hooks/mkdocs/G003_social_cards_adapter.py
 
 # Plugins
 plugins:
@@ -72,7 +73,9 @@ plugins:
   - search:
       lang: fr
   - social:
-      cards: !ENV [MKDOCS_ENABLE_PLUGIN_CARDS, false]
+      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_SOCIAL, true]
+      cache_dir: !ENV [MKDOCS_PLUGIN_SOCIAL_CACHE_DIR, .cache/plugins/social]
+      cards: !ENV [MKDOCS_ENABLE_PLUGIN_SOCIAL_CARDS, true]
       cards_layout_options:
         background_color: "#3e93a7"
         font_family: Ubuntu
@@ -83,14 +86,17 @@ plugins:
 # Theme
 theme:
   name: "material"
+  insiders_flavor: false
   custom_dir: "./content/theme/"
   favicon: theme/assets/images/geotribu/geotribu_logo_tipi_seul_carre.png
 
   features:
     - content.action.edit
+    - content.action.view
     - content.code.annotate
     - content.code.copy
     - content.tabs.link
+    - content.tooltips
     - navigation.prune
     - navigation.tabs
     - navigation.top
@@ -99,9 +105,9 @@ theme:
     - search.share
     - search.suggest
     - toc.follow
-  font: false
-  icon:
-    repo: fontawesome/brands/github-alt
+  font:
+    code: Ubuntu Mono
+    text: Ubuntu
   language: fr
   logo: theme/assets/images/geotribu/geotribu_logo_tipi_seul_carre.png
   palette:
@@ -138,6 +144,14 @@ extra:
 
 extra_css:
   - "theme/assets/stylesheets/extra.css"
+
+extra_javascript:
+  - path: https://mapstodon.space/embed.js
+    defer: true
+    async: true
+  - path: https://platform.twitter.com/widgets.js
+    defer: true
+    async: true
 
 # Extensions to enhance markdown - see: https://squidfunk.github.io/mkdocs-material/getting-started/#extensions
 markdown_extensions:
@@ -176,6 +190,9 @@ markdown_extensions:
           format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true
+      slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
