--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ site_dir: "./build/mkdocs/site"
 
 # Scripts pendant le build
 hooks:
-  - hooks/mkdocs/G001_check_hyperlinks_internal.py
+  - hooks/mkdocs/G003_social_cards_adapter.py
 
 # Plugins
 plugins:
@@ -109,9 +109,13 @@ plugins:
   - search:
       lang: fr
   - social:
-      cards: !ENV [MKDOCS_ENABLE_PLUGIN_CARDS, true]
+      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_SOCIAL, true]
+      cache_dir: !ENV [MKDOCS_PLUGIN_SOCIAL_CACHE_DIR, .cache/plugins/social]
+      cards: !ENV [MKDOCS_ENABLE_PLUGIN_SOCIAL_CARDS, true]
       cards_layout_options:
-        background_color: "#3e93a7"
+        background_color: "#00000000"
+        background_image: content/theme/assets/images/geotribu/banniere_geotribu.jpeg
+        color: "#3e93a7"
         font_family: Ubuntu
   - tags:
       enabled: !ENV [MKDOCS_ENABLE_PLUGIN_TAGS, true]
@@ -119,6 +123,7 @@ plugins:
       listings_sort_by: !!python/name:material.plugins.tags.item_url
 theme:
   name: "material"
+  insiders_flavor: true
   custom_dir: "./content/theme/"
   favicon: theme/assets/images/geotribu/geotribu_logo_tipi_seul_carre.png
   features:
