--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,11 +31,17 @@ plugins:
       enabled: !ENV [MKDOCS_ENABLE_PLUGIN_GIT_AUTHORS, true]
       show_contribution: true
   - git-committers:
-      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_GIT_COMMITTERS, true]
-      repository: geotribu/site-contribuer
+      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_GIT_COMMITTERS, false]
       branch: main
+      cache_dir:
+        !ENV [
+          MKDOCS_PLUGIN_GIT_COMMITTERS_CACHE_DIR,
+          .cache/plugins/git-committers/,
+        ]
       docs_path: content/
-      token: !ENV ["GH_TOKEN_MATERIAL_INSIDERS"]
+      repository: geotribu/site-contribuer
+      token:
+        !ENV ["GH_TOKEN_MATERIAL_INSIDERS", !ENV ["GH_TOKEN_MATERIAL_INSIDERS"]]
   - git-revision-date-localized:
       enabled: !ENV [MKDOCS_ENABLE_PLUGIN_GIT_DATES, true]
       enable_creation_date: true
