--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -129,6 +129,7 @@ theme:
     - content.footnote.tooltips
     - content.tabs.link
     - content.tooltips
+    - navigation.instant.preview
     - navigation.path
     - navigation.prune
     - navigation.tabs
