--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,15 +93,16 @@ plugins:
         - tags
       comments_path: "#__comments"
       date_from_meta:
-        as_creation: "date"
+        as_creation: date
         as_update: false
-        datetime_format: "%Y-%m-%d %H:%M"
+        datetime_format: "%Y-%m-%d"
         default_timezone: Europe/Paris
         default_time: "19:00"
       enabled: !ENV [MKDOCS_ENABLE_PLUGIN_RSS, false]
       image: "https://cdn.geotribu.fr/img/internal/charte/geotribu_logo_64x64.png"
       length: 50
       pretty_print: true
+      use_material_social_cards: true
       url_parameters:
         utm_source: "rss-feed"
         utm_medium: "RSS"
