--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,7 +98,7 @@ plugins:
         datetime_format: "%Y-%m-%d"
         default_timezone: Europe/Paris
         default_time: "19:00"
-      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_RSS, false]
+      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_RSS, true]
       image: "https://cdn.geotribu.fr/img/internal/charte/geotribu_logo_64x64.png"
       length: 50
       pretty_print: true
@@ -110,7 +110,12 @@ plugins:
   - search:
       lang: fr
   - social:
-      cards: !ENV [MKDOCS_ENABLE_PLUGIN_CARDS, true]
+      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_SOCIAL, false]
+      cache_dir: !ENV [MKDOCS_PLUGIN_SOCIAL_CACHE_DIR, .cache/plugins/social]
+      cards: !ENV [MKDOCS_ENABLE_PLUGIN_SOCIAL_CARDS, false]
+      cards_exclude:
+        - index.md
+        - toc_nav_ignored/*.md
       cards_layout_options:
         background_color: "#3e93a7"
         font_family: Ubuntu
