--- a/mkdocs-free.yml
+++ b/mkdocs-free.yml
@@ -58,14 +58,17 @@ plugins:
         - tags
       comments_path: "#__comments"
       date_from_meta:
-        as_creation: "date"
+        as_creation: date
         as_update: false
-        datetime_format: "%Y-%m-%d %H:%M"
+        datetime_format: "%Y-%m-%d"
         default_timezone: Europe/Paris
         default_time: "19:00"
       enabled: !ENV [MKDOCS_ENABLE_PLUGIN_RSS, false]
       image: theme/assets/images/geotribu/geotribu_logo_tipi_seul_carre.png
       length: 50
+      match_path: "(articles|edit|guides|internal|rdp)/.*"
+      pretty_print: false
+      use_material_social_cards: true
       url_parameters:
         utm_source: "rss-feed"
         utm_medium: "RSS"
