--- a/mkdocs-free.yml
+++ b/mkdocs-free.yml
@@ -76,9 +76,9 @@ plugins:
   - search:
       lang: fr
   - social:
-      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_SOCIAL, true]
+      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_SOCIAL, false]
       cache_dir: !ENV [MKDOCS_PLUGIN_SOCIAL_CACHE_DIR, .cache/plugins/social]
-      cards: !ENV [MKDOCS_ENABLE_PLUGIN_SOCIAL_CARDS, true]
+      cards: !ENV [MKDOCS_ENABLE_PLUGIN_SOCIAL_CARDS, false]
       cards_layout_options:
         background_color: "#3e93a7"
         font_family: Ubuntu
