--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -180,6 +180,7 @@ theme:
 # Customization
 extra:
   geotribu_main_site: https://geotribu.fr/
+  theme_insiders_flavor: true
   consent:
     title: Consentement 🍪
     actions:
