--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -244,6 +244,11 @@ markdown_extensions:
       permalink: "#"
 
 validation:
-  omitted_files: warn
-  absolute_links: warn
-  unrecognized_links: warn
+  links:
+    absolute_links: warn
+    not_found: warn
+    unrecognized_links: warn
+  nav:
+    absolute_links: warn
+    not_found: warn
+    omitted_files: warn
