--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,6 +67,8 @@ plugins:
       minify_html: true
   - privacy:
       enabled: !ENV [MKDOCS_ENABLE_PLUGIN_PRIVACY, true]
+      cache_dir:
+        !ENV [MKDOCS_PLUGIN_PRIVACY_EXTERNAL_CACHE_DIR, .cache/plugins/privacy]
       links_attr_map:
         target: _blank
       assets_exclude:
