--- a/mkdocs-free.yml
+++ b/mkdocs-free.yml
@@ -20,6 +20,7 @@ site_dir: !ENV [MKDOCS_OUTPUT_DIR, "./build/mkdocs/site"]
 # Scripts pendant le build
 hooks:
   - hooks/mkdocs/G003_social_cards_adapter.py
+  - hooks/mkdocs/G005_jinja_filters.py
 
 # Plugins
 plugins:
@@ -51,6 +52,7 @@ plugins:
       caption_position: bottom
   - macros:
       include_dir: content/toc_nav_ignored/snippets
+      module_name: hooks/macros/custom_jinja
   - rss:
       abstract_chars_count: 500
       categories:
