--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pre-commit>=3,<4
 # Project requirements
 # -----------------------
 
+geotribu>=0.32,<1
 mkdocs-awesome-pages-plugin>=2.6,<2.10
 mkdocs-exclude>=1.0,<1.1
 mkdocs-git-authors-plugin<0.9
