fix(analytics): change le nom du cookie

--- a/mkdocs-free.yml
+++ b/mkdocs-free.yml
@@ -141,6 +141,8 @@ extra:
     actions:
       - accept
       - reject
+    cookies:
+      analytics: matomo
     description: >
       Nous utilisons des cookies pour le goûter mais aussi pour vous proposer
       des fonctionnalités (commentaires, thème clair ou sombre, etc.) et mesurer
