--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
   "recommendations": [
+    "bierner.markdown-checkbox",
     "bierner.markdown-mermaid",
     "davidanson.vscode-markdownlint",
     "eamodio.gitlens",
