edit(site): retrait logo facebook et ajout bluesky
edit(home): remplacement contact twitter par bluesky

edit(site): cancel facebook et twitter

Revert "edit(site): cancel facebook et twitter"

This reverts commit 2f7d7615d9669a8146cedaf6977cd278d53ea0f3.

edit(site): retrait logo facebook footer

edit(site): ajout mentions compte bluesky

--- a/config/extra_social.yml
+++ b/config/extra_social.yml
@@ -14,9 +14,9 @@ social:
   - icon: "fontawesome/brands/youtube"
     link: https://www.youtube.com/@geotribu
     name: "Chaîne Youtube de Geotribu"
-  - icon: "fontawesome/brands/facebook"
-    link: "https://fr-fr.facebook.com/geotribu/"
-    name: "Page Facebook de Geotribu"
+  # - icon: "fontawesome/brands/facebook"
+  #   link: "https://fr-fr.facebook.com/geotribu/"
+  #   name: "Page Facebook de Geotribu"
   - icon: "fontawesome/brands/mailchimp"
     link: http://eepurl.com/hL0zVr
     name: "Abonnez-vous à la newsletter"
